Adicionando as versões atualizadas e refatoradas das regras de negócio, entidades e fachada.